yaml_parser/tests/fail/invalid-mapping-in-plain-scalar.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 5
  |
3 |   no: key
  |     ^
expected `...`
